css/sass/partials/_typography.scss
@font-face {
	font-family: 'Tiempos';
	src: url('/css/fonts/TiemposTextWeb-Regular.eot'); /* IE9 Compat Modes */
	src: url('/css/fonts/TiemposTextWeb-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
		url('/css/fonts/TiemposTextWeb-Regular.woff') format('woff'); /* Pretty Modern Browsers */
	font-weight: normal;
	font-style: normal;
}
@font-face {
	font-family: 'Tiempos';
	src: url('/css/fonts/TiemposTextWeb-RegularItalic.eot'); /* IE9 Compat Modes */
	src: url('/css/fonts/TiemposTextWeb-RegularItalic.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
		url('/css/fonts/TiemposTextWeb-RegularItalic.woff') format('woff'); /* Pretty Modern Browsers */
	font-weight: normal;
    font-style: italic;
}


body {
	font-size: 0.625em; /* 10px/16px */
	text-rendering: optimizeLegibility;
	-webkit-text-size-adjust: none; /* prevent iOS from resizing small text */
	-webkit-font-smoothing: antialiased;
}

@mixin default-font {
	font: 1.5em "Tiempos", georgia;
	line-height: (2.3em/1.5);
	@include breakpoint(medium) {
		line-height: (2.3em/1.5)
	}
	@include breakpoint(large) {
		font-size: 1.7em;
		line-height: (2.6em/1.7);
	}
	@include breakpoint(huge) {
		font-size: 2em;
		line-height: (3em/2);
	}
}
@mixin h1 {
	font: 2.8em "futura-pt", arial, sans-serif;
	line-height: (3.3em/2.8);
	@include breakpoint(medium) {
		font-size: 6.4em;
		line-height: (6.7em/6.4);
	}
	@include breakpoint(large) {
		font-size: 8em;
		line-height: (8.2em/8);
	}
}
@mixin h2 {
	font: 2.1em "futura-pt", arial, sans-serif;
	line-height: (2.5em/2.1);
	margin-bottom: 5px;
	letter-spacing: 0.01em;
	@include breakpoint(medium) {
		font-size: 2.8em;
		line-height: (3.5em/2.8);
	}
	@include breakpoint(large) {
		font-size: 3em;
		line-height: (3.8em/3);
	}
}
@mixin h2-small {
	font: 1.8em "futura-pt", arial, sans-serif;
	line-height: (2.3em/1.8);
	letter-spacing: 0.03em;
	@include breakpoint(large) {
		font-size: 2.1em;
		line-height: (2.6em/2.1);
	}
}
@mixin h2-serif {
	font: 2.7em "Tiempos", georgia;
	line-height: (3.3em/2.7);
	margin-bottom: 5px;
	@include breakpoint(medium) {
		font-size: 3.2em;
		line-height: (3.9em/3.2);
	}
	@include breakpoint(large) {
		font-size: 3.5em;
		line-height: (4.2em/3.5);
	}
}
@mixin h3 {
	@include default-font;
}
@mixin h4 {
	@include default-font;
	font-style: italic;
	margin-bottom: 12px;
}
@mixin h1-bottom-rule {
	display: block;
	border-bottom: 3px solid $text-color;
	padding-bottom: 13px;
	margin-bottom: 10px;
	@include breakpoint(medium) {
		border-bottom: 6px solid $text-color;
		padding-bottom: 18px;
		margin-bottom: 16px;
	}
	@include breakpoint(large) {
		border-bottom: 8px solid $text-color;
		padding-bottom: 28px;
		margin-bottom: 19px;
	}
}
@mixin h2-bottom-rule {
	display: block;
	border-bottom: 3px solid $text-color;
	padding-bottom: 8px;
	margin-bottom: 5px;
	@include breakpoint(medium) {
		padding-bottom: 10px;
		margin-bottom: 7px;
	}
	@include breakpoint(large) {
		padding-bottom: 9px;
		margin-bottom: 4px;
	}
}
@mixin h3-bottom-rule {
	padding-bottom: 10px;
	border-bottom: 3px solid $text-color;
	padding-bottom: 9px;
	margin-bottom: 8px;
	@include breakpoint(medium) {
		padding-bottom: 11px;
		margin-bottom: 10px;
	}
	@include breakpoint(huge) {
		margin-bottom: 12px;
	}
}
@mixin intro-text {
	font: 3.2em "Tiempos", Georgia;
	line-height: (4em/3.2);
	@include breakpoint(medium) {
		font-size: 5em;
		line-height: (6em/5);
	}
	@include breakpoint(large) {
		font-size: 6.5em;
		line-height: (7.8em/6.5);
		letter-spacing: -0.8px;
	}
}
@mixin about-h1 {
	font: 2.3em "Tiempos", georgia;
	line-height: (3em/2.3);
	margin-bottom: 5px;
	@include breakpoint(medium) {
		font-size: 3.2em;
		line-height: (3.9em/3.2);
	}
	@include breakpoint(large) {
		font-size: 3.5em;
		line-height: (4.2em/3.5);
	}
}
@mixin article-h1 {
	font: 2.3em "Tiempos", georgia;
	line-height: (3.3em/2.3);
	margin: 38px 0 42px;
	@include breakpoint(medium) {
		font-size: 4.8em;
		line-height: (6em/4.8);
		margin: 38px 0 42px;
	}
	@include breakpoint(large) {
		font-size: 6.5em;
		line-height: (7.8em/6.5);
		margin: 46px 0 62px;
	}
}
@mixin sub-navigation {
	font: 1em "Tiempos", georgia;
	line-height: (1.6em/1);
	@include breakpoint(medium) {
		line-height: (1.7em/1)
	}
	@include breakpoint(large) {
		font-size: 0.9em;
		line-height: (1.4em/0.9);
	}
	@include breakpoint(huge) {
		font-size: 0.7em;
		line-height: (1.3em/0.7);
	}
}



h1 {
	@include h1;
}
h2 {
	@include h2;
}
h3 {
	@include h3;
}
h4 {
	@include h4;
}
p, label, li, input, textarea {
	@include default-font;
}
input, textarea {
    -webkit-appearance: none;
    border-radius: 0;
}
li p {
	font-size: 1em;
}
a {
	color: $text-color;
	text-decoration: none;
}
a:focus, a:active {
	outline: none;
}
strong {
	font-weight: bold;
}
em {
	font-style: italic;
}
img {
	width: 100%;
}
hr {
	border: none;
	background: none;
	margin: 0;
	padding: 21px 0 0 0;
	@include breakpoint(medium) {
		padding: 23px 0 0 0;
	}
	@include breakpoint(large) {
		padding: 26px 0 0 0;
	}
}
.body {
	h4 {
		margin: 1em 0 0;
	}
	p {
		text-indent: 2em;
		&.first {
			text-indent: 0;
		}
	}
	h3, h4, p, ul {
		max-width: $max-paragraph-width;
		@include breakpoint(huge) {
			max-width: $max-paragraph-width-huge;
		}
	}
	ul {
		padding: 10px 0;
	}
	li {
		padding-left: 1em;
		&:before {
			display: inline-block;
			content: "–";
			width: 1em;
			margin-left: -1em;
		}
	}
}
.body a, .standfirst a {
	border-bottom: 1px solid $accent-color;
	&:hover {
		color: $accent-color;
	}
}
p.note {
	color: $link-color;
	margin: 1em 0;
	text-indent: 0;
}
p.promo {
	@include h2;
	border: 10px solid $accent-color;
	padding: 12px 16px 15px 16px;
	text-indent: 0;
	@include breakpoint(medium) {
		@include h2-small;
		padding: 16px 21px 18px 21px;
	}
	@include breakpoint(large) {
		padding: 20px 25px 23px 25px;
	}
}

